# veteris

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/geom/: Base.h  Box.h  Matrix.h  Mesh.h  Normal.h  Point.h  Transform.h  Vector.h
